# call45aggr

./: CMakeLists.txt  Dockerfile.centos6  Dockerfile.centos7  Doxyfile  README.md  build.sh  conanfile.txt  make.sh
conf/: call45aggr.json
rpm/etc/init.d/: call45aggr
rpm/etc/monit.d/: call45aggr
schema/: DataVoipRecord.sql  PstnRecord.sql  TestRecord.sql
src/: common.cpp  common.hpp  main.cpp  types.hpp  version.hpp
src/common/: array_view.hpp  comact_pretty_function.hpp  concat.hpp  join_through.hpp  numeric.hpp  osstream.hpp  ostream_container.hpp  range_algo.hpp  reusable_object.hpp  size_for_output.hpp  split.cpp  split.h  string_streambuf.cpp  string_streambuf.hpp  timed_vector.hpp  transform.hpp  type.hpp
src/common/meta/: accessor.hpp  for_each_argument.hpp
src/daemon/: application.cpp  application.hpp  config.hpp  cyclic_task.cpp  cyclic_task.hpp  daemon.cpp  daemon.hpp  health_register.cpp  health_register.hpp  life_span.cpp  life_span.hpp  settings.cpp  settings.hpp  thread.cpp  thread.hpp  thread_name.cpp  thread_name.hpp  thread_pool.cpp  thread_pool.hpp
src/data/: BaseData.hpp  BaseDataImpl.hpp  Container.cpp  Container.hpp  DataVersion.cpp  DataVersion.hpp  Loader.cpp  Loader.hpp  Repository.cpp  Repository.hpp  common.h  persistent.cpp  persistent.hpp
src/data/counters/: BaseObjCounter.hpp  CountersLoader.hpp  ObjCounter.hpp
src/data/list/: BaseObjList.cpp  BaseObjList.h  CallLegLinkList.cpp  CallLegLinkList.h  CallLegLinkOnlineList.cpp  CallLegLinkOnlineList.h  CallLegList.cpp  CallLegList.h  CallLegOnlineList.cpp  CallLegOnlineList.h  ObjList.cpp  ObjList.h
src/data/model/: BaseModel.h  CallLeg.h  CallLegLink.h  CallLegLinkOnline.h  CallLegOnline.h  CallRecord.h  DataVoipRecord.h  LegsAggrRaw.h  PstnRecord.h
src/data/sync/: ArgumentsWrapper.h  PullManager.cpp  PullManager.h  PullWorker.cpp  PullWorker.h  Puller.cpp  Puller.h  PullersList.cpp  SharedSpeedLimiter.h
src/db/: BDb.cpp  BDb.h  BDbResult.cpp  BDbResult.h  BDbTransaction.cpp  BDbTransaction.h  DbException.cpp  DbException.h  DbPool.cpp  DbPool.hpp  Id.h  MockBDb.cpp  MockBDb.h  MockBDbResult.cpp  MockBDbResult.h  MockData.h  ParamQuery.cpp  ParamQuery.h  SpeedLimiter.cpp  SpeedLimiter.h
src/db/procedure/: types.hpp
src/log/: expression.hpp  file_log_writer.cpp  file_log_writer.hpp  graylog_writer.cpp  graylog_writer.hpp  log.cpp  log.hpp  log_delay.hpp  log_handler.hpp  log_instance.cpp  log_instance.hpp  log_level.cpp  log_level.hpp  log_message.cpp  log_message.hpp  old_log.hpp  parameters.hpp  trace.cpp  trace.hpp  trace_color.hpp  trace_node.cpp  trace_node.hpp
src/service/: MergeContainer.cpp  MergeContainer.h  MergeOnline.cpp  MergeOnline.h  MergeService.cpp  MergeService.h  ReadCallLeg.cpp  ReadCallLeg.h  ReadCallLegLink.cpp  ReadCallLegLink.h
src/service/format/: BaseReport.h  DataVoipRecordReport.cpp  DataVoipRecordReport.h  DataVoipRecordReport_old.cpp  LegsAggrRawReport.cpp  LegsAggrRawReport.h  PstnRecordReport.cpp  PstnRecordReport.h
src/systems/: Allocator.cpp  Allocator.hpp  BlockedQueue.h  Exception.h  ExceptionHolder.cpp  ExceptionHolder.h  NoneMutex.hpp  RingBuffer.h  ScopeGuard.h  Singleton.h  Spinlock.cpp  Spinlock.h  Timer.cpp  Timer.h
src/web/: aggregated.cpp  aggregated.hpp  fabrique.cpp  fabrique.hpp  server.cpp  server.hpp  view.cpp  view.hpp
src/web/api/: healthcheck.cpp  healthcheck.hpp
src/web/page/: config.cpp  config.hpp  cyclic_task.cpp  cyclic_task.hpp  data.cpp  data.hpp  favicon.cpp  favicon.hpp  health.cpp  health.hpp  leg.cpp  leg.hpp  link.cpp  link.hpp  log.cpp  log.hpp  merge.cpp  merge.hpp  online.cpp  online.hpp  params.hpp  records.cpp  records.hpp  rendering.cpp  rendering.hpp  root.cpp  root.hpp  state.cpp  state.hpp  sync.cpp  sync.hpp  time.cpp  time.hpp
utils/: build_generator.py
